--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 	<title>Azzahra Salma Kamila</title>
-</head>
 <body>
 	<h1>Profil Azzahra</h1>
-		<h2>Biodata</h2>
+	<link rel="stylesheet" type="text/css" href="style.css">
+		<h2 class="biru">Biodata</h2>
 		<ol>
 		<li>Nama: Azzahra Salma Kamila</li>
 		<li>TTL: Bogor, 06 Juli 2002</li>
@@ -16,14 +16,14 @@
 	</ol>
 	<h2>Hobi</h2>
 	<ol>	
-		<p>Saya suka menonton film, mendengarkan musik di pagi dam malam hari, dan membaca buku yang menurut saya menarik untuk membaca. Itu meyenangkan sekali karna bisa mengisi waktu luang saya.</p>
+		<p>Saya suka menonton film, mendengarkan musik di pagi dam malam hari, dan membaca buku yang menurut saya menarik untuk membaca. Itu menyenangkan sekali karna bisa mengisi waktu luang saya.</p>
 		<img src="ara(hobi).png" width="300">
 	</ol>
-	<h2>Masa Lalu</h2>
+	<h2 class="ungu">Masa Lalu</h2>
 	<ol>
-		<p>Ini masa lalu saya bersama mantan pacar saya waktu sedang bermain di dufan saat itu seru sekali bermain dengannya dan sekarang dia sudah berbahagia dengan yang lain</p>
+		<p>Ini masa lalu saya bersama mantan pacar saya waktu sedang bermain di dufan saat itu senang sekali bermain dengannya dan sekarang dia sudah berbahagia dengan yang lain</p>
 		<img src="ara(idola).png" width="300">
 		<p>Jika ingin tahu siapa orang lain itu klik foto dibawah ini</p>
-		<a href="https://www.instagram.com/p/Bsz_Jr5gEiQ/?utm_source=ig_web_copy_link"><img src="jefri.jpg" width="300">	
+		<a href="https://www.instagram.com/p/Bsz_Jr5gEiQ/?utm_source=ig_web_copy_link"><img class="bening" src="jefri.jpg" width="300">	
 </body>
 </html>
