--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Azzahra Salma Kamila</title>
-<body>
+<body style="background-image: url(imagee.jpg)">
 	<h1>Profil Azzahra</h1>
 	<link rel="stylesheet" type="text/css" href="style.css">
 		<h2 class="biru">Biodata</h2>
