--- a/index2.html
+++ b/index2.html
@@ -7,7 +7,7 @@
 <body style="background-image: url(4.jpg)">
 <h1><center><strong><font face="Century Gothic"><i>HELLO EVERYONE!</i></font></strong></center></h1>
 <h2><center> <font face="Century Gothic"><i>ABOUT</i></font></center></h2>
-<center> <img src="7.JPG" width="300" height="300"> </center>
+<center> <img src="7.jpg" width="300" height="300"> </center>
 <p><center><strong>Nama saya Azzahra Salma Kamila, biasa dipanggil Ara, lahir di Bogor 06 juli 2002. Sekarang bersekolah di SMK-SMAK Bogor sekarang saya kelas 11 angkatan 63 yang nama angkatannya Pragnacio Neutrina, oleh karena itu saya ngekos di Wisma Jihan di Jalan Ciheuleut atau yang biasa disebut wisji oleh teman-teman saya. Saya sebenarnya tinggal di Cileungsi, maka dari itu saya ngekos. </strong></center></p>
 <h2><center> <font face="Century Gothic"><i>LOVE OF MY LIFE</i></font></center></h2>
 <center><img src="6.jpg" width="300" height="300"></center>
