--- a/index2.html
+++ b/index2.html
@@ -16,7 +16,7 @@
 <center><img src="9.jpg" width="400" height="300">	<img src="11.jpg" width="500" height="300"></center>
 <h3><center><strong>Big Family</strong></center></h3>
 <p><center><strong>Jadi ini foto keluarga besar saya, mama saya merupakan anak ke 6 dari 7 bersaudara dan ayah saya anak ke 1 dari 4 bersaudara jadi nenek dan kakek saya dari mama mempunyai 14 cucu dan 1 cicit dan kalau nenek dan kakek dari ayah mempunyai 4 cucu diantaranya adalah saya dan adik saya. Tapi sayangnya kakek saya dari ayah ataupun mama sudah meninggal dua dua nya jadi saya tidak punya kakek lagi deh. </strong></center></p>
-<center><img src="8.jpg" width="400" height="300">	<img src="10.jpg" width="400" height="300"></center>
+<center><img src="8.jpg" width="400" height="300">	<img src="10.JPG" width="400" height="300"></center>
 <h3><center><strong>My beloved bestfriends</strong></center></h3>
 <p><center><strong>Mereka adalah teman dekat saya sewaktu di SMP tepatnya kelas 9. kemana-mana kita pasti selalu bareng-bareng. jadi rata-rata dari kita itu lanjutin SMA di sekolah yang sama, cuman saya dan satu temen saya yaitu yang tidak pake kerudung yang lanjutin sekolah di sekolah yang berbeda. Tapi seiring berjalannya waktu, yang masih sering main bareng cuman bertiga salah satunya saya sedih banget kan, padahal dulu tuh kita deket bangett lho. </strong></center></p>
 <center><img src="12.jpg" width="300" height="200">	<img src="13.png" width="300" height="200">	<img src="14.jpg" width="300" height="200"> <img src="15.jpg" width="300" height="200"></center>
