--- a/index2.html
+++ b/index2.html
@@ -19,7 +19,7 @@
 <center><img src="8.jpg" width="400" height="300">	<img src="10.JPG" width="400" height="300"></center>
 <h3><center><strong>My beloved bestfriends</strong></center></h3>
 <p><center><strong>Mereka adalah teman dekat saya sewaktu di SMP tepatnya kelas 9. kemana-mana kita pasti selalu bareng-bareng. jadi rata-rata dari kita itu lanjutin SMA di sekolah yang sama, cuman saya dan satu temen saya yaitu yang tidak pake kerudung yang lanjutin sekolah di sekolah yang berbeda. Tapi seiring berjalannya waktu, yang masih sering main bareng cuman bertiga salah satunya saya sedih banget kan, padahal dulu tuh kita deket bangett lho. </strong></center></p>
-<center><img src="12.jpg" width="300" height="200">	<img src="13.png" width="300" height="200">	<img src="14.jpg" width="300" height="200"> <img src="15.jpg" width="300" height="200"></center>
+<center><img src="12.JPG" width="300" height="200">	<img src="13.PNG" width="300" height="200">	<img src="14.JPG" width="300" height="200"> <img src="15.JPG" width="300" height="200"></center>
 <h3><center><strong>Support system.</strong></center></h3>
 <p><center><strong>Jadi ini adalah oknum oknum yang membuat aku jadi sering main, mereka yang nyuruh buat hemat tapi mereka juga yang bikin boros, yang selalu ada disaat sedih ataupun seneng, yang selalu bantuin dan ngehibur disaat lagi down, aku sayang mereka dan pasti kalau mereka liat ini aku diketawain. Mereka tuh 24/7 banget kaya sister from another mother gitu wkwk. Dulu waktu kelas 10 kita sekelas tapi sekarang karna udah kelas 11 jadi ga sekelas lagi deh, sedih si tapi yaudalah ya gimana lagi. pokonya i love them to the moon and back!  </strong></center></p>
 <h2><center> <font face="Century Gothic"><i>Another Love Of My Life</i></font></center></h2>
